# koriel-asi-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSCIOUSNESS_IMPLEMENTATION_SITREP.md  CONTRIBUTING.md  Commands  IMPLEMENTATION_SUMMARY.md  KORIEL_ASI_IMPLEMENTATION_COMPLETE.md  LICENSE  MAINTENANCE.md  Makefile  PROBE_SCRIPTS_README.md  QRFT_README.md  README.md  advanced_qrft_tests.py  advanced_qrft_validation_results.json  bootstrap_asi.sh  brutal_consciousness_validation.json  brutal_consciousness_validation.py  brutal_qrft_tests.py  brutal_qrft_validation_results.json  build.js  byte_lm_inspection.json  chaos_testing.py  consciousness_interface.py  extreme_qrft_stress_test.py  final_qrft_validation_report.py  index.js  koriel-run  koriel_operator.py  metrics_server.py  model_inspect.py  mypy.ini  package.json  pyproject.toml  pytest.ini  qrft_chat.py  qrft_final_validation_report.json  quantum_consciousness_field.py  quantum_consciousness_simple.py  (+17 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  perm_probe.txt
artifacts/: final_validation_report.json  tinylm_report.json  validator_report.json
benchmarks/: README.md  __init__.py  arc.py  base.py  mmlu.py  run.py  utils.py
checkpoints/: tinylm.pt
config/: chaos.json  ethics_policy.json  rcce.yaml
configs/: default.yaml  quick_test.yaml
conversations-pocket/: Brane-Semantic Collapse Model.md  Koriel-ASI Architecture and Consciousnes.md  OUTDATED_only_for_reference.md  adv_01.txt  adv_02.txt  convo-snippet932025  end-to-end-minimal-specs.md  id_01.txt  (+5 more)
(+347 files in other folders)
